--- a/src/protocol/develop/actions/G1 - Initiative.yaml
+++ b/src/protocol/develop/actions/G1 - Initiative.yaml
@@ -55,7 +55,7 @@ fields:
   - name: VoteSystem
     label: Vote System
     description: "X for Vote System X. (1-255, 0 is not valid.)"
-    type: uint8
+    type: uint
     size: 1
     example_hex: 01
     example_value: "1"
@@ -65,12 +65,6 @@ fields:
     label: Proposal
     description: "1 for a Proposal, 0 for an initiative that is requesting changes to specific subfields for modification. If this field is true, the subfields should be empty.  The smart contract cannot interpret the results of a vote when Proposal = 1.  All meaning is interpreted by the token owners and smart contract simply facilates the record keeping.  When Proposal = 0, the smart contract always assumes the first choice is a 'yes', or 'pass', if the threshold is met, and will process the proposed changes accordingly."
     type: bool
-    size: 1
-    example_hex: 00
-    example_value: 0
-
-  - name: ProposedChangesCount
-    type: uint8
     size: 1
     example_hex: 00
     example_value: 0
@@ -93,7 +87,7 @@ fields:
   - name: VoteMax
     label: Vote Max
     description: "Range: 1-X. How many selections can a voter make in a Ballot Cast.  1 is selected for Y/N (binary)"
-    type: uint8
+    type: uint
     size: 1
     example_hex: 0f
     example_value: "15"
