--- a/src/protocol/develop/types/QuantityIndex.yaml
+++ b/src/protocol/develop/types/QuantityIndex.yaml
@@ -6,7 +6,7 @@ fields:
   - name: Index
     label: Index
     description: "The index of the input sending the tokens"
-    type: uint16
+    type: uint
     size: 2
     example_hex: 0000
     example_value: 0
@@ -15,7 +15,7 @@ fields:
   - name: Quantity
     label: Quantity
     description: "Number of tokens being sent"
-    type: uint64
+    type: uint
     size: 8
     example_hex: 0000000000000064
     example_value: 100
