--- a/src/assets/develop/MEM - Membership.yaml
+++ b/src/assets/develop/MEM - Membership.yaml
@@ -21,7 +21,7 @@ metadata:
 fields:
   - name: Version
     label: Version
-    type: uint8
+    type: uint
     description: Payload Version
     size: 1
     example: 0
