--- a/src/protocol/develop/actions/C3 - Contract Amendment.yaml
+++ b/src/protocol/develop/actions/C3 - Contract Amendment.yaml
@@ -55,19 +55,10 @@ fields:
   - name: ContractRevision
     label: Contract Revision
     description: "Counter 0 - 65,535"
-    type: uint16
+    type: uint
     size: 2
     example_hex: 002a
     example_value: 42
-    notes: ""
-
-  - name: AmendmentsCount
-    label: AmendmentsCount
-    description: "Number of Amendments. Must be less than the max Subfield Index of CF."
-    type: uint8
-    size: 1
-    example_hex: 00
-    example_value: 0
     notes: ""
 
   - name: Amendments
