--- a/src/protocol/develop/actions/E3 - Thaw.yaml
+++ b/src/protocol/develop/actions/E3 - Thaw.yaml
@@ -30,19 +30,12 @@ fields:
     type: Header
     notes: "Common header data for all actions."
 
-  - name: AddressCount
-    label: Number of Addresses
-    description: "0 - 65,535"
-    type: uint16
-    size: 2
-    example_hex: 0000
-    example_value: 0
-    notes: ""
-
   - name: Addresses
     label: Addresses
     description: "Addresses holding tokens to be thawed."
     type: Address[]
+    # array size is number of bits to serialize the size of the array
+    size: 16
     notes: ""
 
   - name: RefTxnID
