--- a/src/resources/develop/messages/0003 - Private Message.yaml
+++ b/src/resources/develop/messages/0003 - Private Message.yaml
@@ -1,12 +1,12 @@
 #
-# Private Message: Generic private message. Sent to another address(s). Encryption is to be used.
+# Private Message: Generic private message. Sent to another address(es). Encryption is to be used.
 #
 
-code: '0002'
+code: '0003'
 
 metadata:
   label: Public Message
-  description: "Generic public message or public announcement. Sent to another PKH or back to the same PKH.  Can be used for an official issuer announcement."
+  description: "Generic private message. Sent to another address(es). Encryption is to be used."
 
 fields:
   - name: Timestamp
