--- a/src/resources/develop/messages/0002 - Public Message.yaml
+++ b/src/resources/develop/messages/0002 - Public Message.yaml
@@ -1,13 +1,23 @@
 #
-# Public Message: Generic public message or public announcement. Sent to another PKH or back to the same PKH.  Can be used for an official issuer announcement.
+# Public Message: Generic public message or public announcement. Sent to an address(es).  Can be used for an official issuer announcement.
 #
 
 code: '0002'
 
 metadata:
   label: Public Message
-  description: "Generic public message or public announcement. Sent to another PKH or back to the same PKH.  Can be used for an official issuer announcement."
+  description: "Generic public message or public announcement. Sent to an address(es).  Can be used for an official issuer announcement."
+
 fields:
+  - name: Timestamp
+    label: Timestamp
+    description: "Timestamp in nanoseconds for when the message sender creates the transaction."
+    type: timestamp
+    size: 8
+    example_hex: 1588f8cc6a16430d
+    example_value: 1551767413250187179
+    notes: ""
+    
   - name: PublicMessage
     label: Public Message
     description: "Tokenized Ltd. announces product launch."
