--- a/src/resources/develop/messages/0001 - Signature Request.yaml
+++ b/src/resources/develop/messages/0001 - Signature Request.yaml
@@ -1,14 +1,23 @@
 #
-# Signature Request: Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties that still have to sign the transaction.
+# Signature Request: Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties (including Smart Contracts) that still have to sign the transaction.
 #
 
 code: '0001'
 
 metadata:
   label: Signature Request
-  description: "Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties that still have to sign the transaction.
+  description: "Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties (including Smart Contracts) that still have to sign the transaction.
 
 fields:
+  - name: Timestamp
+    label: Timestamp
+    description: "Timestamp in nanoseconds for when the message sender creates the transaction."
+    type: timestamp
+    size: 8
+    example_hex: 1588f8cc6a16430d
+    example_value: 1551767413250187179
+    notes: ""  
+  
   - name: SigRequest
     label: Signature Request
     description: "A Bitcoin transaction with multiple inputs from different wallets/users."
