--- a/src/messages/develop/1002 - Signature Request.yaml
+++ b/src/messages/develop/1002 - Signature Request.yaml
@@ -5,8 +5,9 @@
 code: '1002'
 
 metadata:
+  name: SignatureRequest
   label: Signature Request
-  description: "Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties (including Smart Contracts) that still have to sign the transaction.
+  description: "Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties (including Smart Contracts) that still have to sign the transaction."
 
 fields:
   - name: Timestamp
@@ -16,11 +17,11 @@ fields:
     size: 8
     example_hex: 1588f8cc6a16430d
     example_value: 1551767413250187179
-    notes: ""  
-  
+    notes: ""
+
   - name: SigRequest
     label: Signature Request
-    description: "A Bitcoin transaction with multiple inputs from different wallets/users."
-    type: nvarchar32
-    example_value: ""
+    description: "Full serialized bitcoin tx with multiple inputs from different wallets/users."
+    type: varbin
+    size: 32
     notes: ""
