--- a/src/protocol/develop/types/AssetTransfer.yaml
+++ b/src/protocol/develop/types/AssetTransfer.yaml
@@ -4,6 +4,12 @@ metadata:
   description: "AssetTransfer is the data required to transfer an asset."
 
 fields:
+  - name: ContractIndex
+    label: Contract Index
+    description: "Index of output containing the contract's address for this offset"
+    type: uint
+    size: 2
+
   - name: AssetType
     label: Asset Type
     description: "eg. Share, Bond, Ticket. All characters must be capitalised."
