--- a/src/resources/develop/messages/1001 - Offer.yaml
+++ b/src/resources/develop/messages/1001 - Offer.yaml
@@ -9,6 +9,14 @@ metadata:
   description: "A message that contains all of the details required for an agreement to be formed. Sent to an address(es). The Offer should have all, or nearly all, of the details required for the receiving party to accept the offer.  The Offer shall be in the form of a partially formed Bitcoin transaction with all of the relevent details (offer, consideration, offeror's payment/receipt details, etc.).  The Offer message is different to a Signature Request message in that it is missing the offeree's payment/receipt details (eg. UTXOs). If the Offer message is well received by the offeree, then the offeree can add their relevent details (eg. inputs/outputs) and sign the transaction.  If an additional signature is required from the offeror at this point, then the partially-signed transaction can be sent to the offeror by way of a Signature Request message."
 
 fields:
+  - name: Version
+    label: Version
+    type: uint8
+    description: Payload Version
+    size: 1
+    example: 0
+    computed: true
+    
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
