Update 0002 - Public Message.yaml

--- a/src/resources/develop/messages/0002 - Public Message.yaml
+++ b/src/resources/develop/messages/0002 - Public Message.yaml
@@ -9,6 +9,14 @@ metadata:
   description: "Generic public message or public announcement. Sent to an address(es).  Can be used for an official issuer announcement."
 
 fields:
+  - name: Version
+    label: Version
+    type: uint8
+    description: Payload Version
+    size: 1
+    example: 0
+    computed: true
+    
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
