Add types for public keys, asset codes, tx ids, and timestamps.

--- a/src/assets/develop/COU - Coupon.yaml
+++ b/src/assets/develop/COU - Coupon.yaml
@@ -43,8 +43,7 @@ fields:
 
   - name: IssueDate
     label: Issue Date
-    type: time
-    size: 8
+    type: Timestamp
     example: Sat Dec 12 2015 18:00:00 GMT+1000 (AEST)
     span: left
     displayOrder: 3
@@ -52,8 +51,7 @@ fields:
 
   - name: ExpiryDate
     label: Expiry Date
-    type: time
-    size: 8
+    type: Timestamp
     example: Sat Dec 12 2020 18:00:00 GMT+1000 (AEST)
     span: right
     displayOrder: 4
