--- a/src/assets/develop/TIC - Admission Ticket.yaml
+++ b/src/assets/develop/TIC - Admission Ticket.yaml
@@ -99,8 +99,7 @@ fields:
 
   - name: StartTimeDate
     label: Start Time and Date
-    type: timestamp
-    size: 8
+    type: Timestamp
     example: Mon Nov 05 2018 09:00:00 GMT+1000 (AEST)
     span: left
     displayOrder: 2
@@ -108,16 +107,14 @@ fields:
 
   - name: ValidFrom
     label: Valid From
-    type: timestamp
-    size: 8
+    type: Timestamp
     example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
     span: right
     displayOrder: 3
 
   - name: ExpirationTimestamp
     label: Expiration Timestamp
-    type: timestamp
-    size: 8
+    type: Timestamp
     example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
     span: right
     displayOrder: 3
