--- a/src/messages/develop/1002 - Signature Request.yaml
+++ b/src/messages/develop/1002 - Signature Request.yaml
@@ -13,8 +13,7 @@ fields:
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
-    type: timestamp
-    size: 8
+    type: Timestamp
     example_hex: 1588f8cc6a16430d
     example_value: 1551767413250187179
     notes: ""
