--- a/src/protocol/develop/actions/C2 - Contract Formation.yaml
+++ b/src/protocol/develop/actions/C2 - Contract Formation.yaml
@@ -80,8 +80,7 @@ fields:
   - name: ContractExpiration
     label: Contract Expiration
     description: "All actions related to the contract will cease to work after this timestamp. The smart contract will stop running.  This will allow many token use cases to be able to calculate smart contract running costs. Eg. an issuer is creating tickets for an event on the 5th of June 2018.  The smart contract will facilitate exchange and send transactions up until the 6th of June.  Wallets can use this to forget tokens that are no longer valid - or at least store them in an 'Expired' folder."
-    type: time
-    size: 8
+    type: Timestamp
     example_hex: 00000163400d3f00
     example_value: "Wed May 09 2018 00:00:00 GMT+1000 (AEST)"
     notes: "Contract Expiration - Amendments can be restricted to a vote."
@@ -301,8 +300,7 @@ fields:
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
-    type: timestamp
-    size: 8
+    type: Timestamp
     example_hex: 1588f8cc6a16430d
     example_value: 1551767413250187179
     notes: "Cannot be changed by issuer, operator. Smart contract controls."
