--- a/src/protocol/develop/actions/E4 - Confiscation.yaml
+++ b/src/protocol/develop/actions/E4 - Confiscation.yaml
@@ -37,7 +37,7 @@ fields:
   - name: Addresses
     label: Addresses
     description: "Addresses holding tokens to be confiscated."
-    type: Address[]
+    type: PublicKeyHash[]
     # array size is number of bits to serialize the size of the array
     size: 16
     notes: ""
@@ -54,8 +54,7 @@ fields:
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
-    type: timestamp
-    size: 8
+    type: Timestamp
     example_hex: 1588f8cc6a16430d
     example_value: 1551767413250187179
     notes: "Cannot be changed by issuer, operator. Smart contract controls."
