--- a/src/protocol/develop/actions/T2 - Settlement.yaml
+++ b/src/protocol/develop/actions/T2 - Settlement.yaml
@@ -39,8 +39,7 @@ fields:
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
-    type: timestamp
-    size: 8
+    type: Timestamp
     example_hex: 1588f8cc6a16430d
     example_value: 1551767413250187179
     notes: "Cannot be changed by issuer, operator. Smart contract controls."
