--- a/src/protocol/develop/actions/C3 - Contract Amendment.yaml
+++ b/src/protocol/develop/actions/C3 - Contract Amendment.yaml
@@ -52,9 +52,9 @@ fields:
 
   - name: ContractRevision
     label: Contract Revision
-    description: "Counter 0 - 65,535"
+    description: "Counter 0 to (2^32)-1"
     type: uint
-    size: 2
+    size: 4
     example_hex: 002a
     example_value: 42
     notes: ""
