--- a/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
+++ b/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
@@ -89,9 +89,9 @@ fields:
 
   - name: ContractRevision
     label: Contract Revision
-    description: "Counter 0 - 65,535"
+    description: "Counter 0 to (2^32)-1"
     type: uint
-    size: 2
+    size: 4
     example_hex: 0000
     example_value: "0"
     notes: ""
