--- a/src/protocol/develop/types/Manager.yaml
+++ b/src/protocol/develop/types/Manager.yaml
@@ -1,11 +1,11 @@
 metadata:
-  name: NotableRole
-  description: "NotableRole is used to refer to a role of note in an Entity."
+  name: Manager
+  description: "Manager is used to refer to a role that is responsible for the Management of an Entity."
 
 fields:
   - name: Type
-    label: Notable Role Type
-    description: "Found in 'Roles' in Specification/Resources"
+    label: Manager Type
+    description: "CEO, COO, CFO, etc. Found in 'Roles' in Specification/Resources"
     type: uint
     size: 1
     example_hex: 35
@@ -13,7 +13,7 @@ fields:
     notes: "5 - CEO"
 
   - name: Name
-    label: Notable Role Name
+    label: Manager Name
     description: "Length 0-255 bytes. 0 is valid. Name (eg. John Alexander Smith)"
     type: varchar
     # varchar size is number of bits to serialize the size of the value
